# ditiear

./: .gitignore  Cargo.toml  README.md
src/: common.rs  diff.rs  hash.rs  lib.rs  patch.rs  prelude.rs
tests/: diff_tests.rs
tests/assets_blobs_rec/1/: 03bfe265db2a337  08284f1e8ddd8b5  0fa35e1c9d7a453  11680bc65ef0984  1c55688b9028cc  1d08272d2a0c496  22bece05ff3b932  23130687b53ec3a  252a2f4fb648717  2825e9910312d37  300bfdf7ea54ef0  31d1208431fd70a  32a7bb9854ee05e  3455f0912a34c58  349d1b084c75efe  38393c2ffb41081  38560e0f1532447  3a775344bd6c7a0  3ccb753f08cd776  3ed0208be792a22  437bd63799a43ab  464f5b7d1dcd5a3  46f5785640a3311  4e68d67228c6cf1  5137e370d910c5  5321ec7420ebd63  54de66eb6853ad5  54f87d7455a243c  561e35d72e4917d  56822eb8647d33f  5ae2b2b069ec3f3  5d775f868bfb1c8  5de8b402043e927  5ee6b3977908340  5f1b79101c35f56  60599eaf605b534  690828161a2ab1a  6be3227796a5d8  717461b294b555c  72dde1b6ffd6f4c  (+48 more)
tests/assets_blobs_rec/2/: 107d8a3db9ac813  1560ac685b56a92  187b360fca4b206  1af878fbfed4d10  1b71f32f2ccb182  1dd07538b4dd8c7  1ffeccc05129d74  214a236149a110b  22ad3231161dea7  24507f3b7186ae0  2470044fbad25e9  261d17245961e54  28187f7ab48a30b  2c058e87ee4576  304bbf2a32d45a8  35763e223e368f3  37b9d5e90348f  3988f383b7669c4  39c24b84e381361  3c330095be364e9  3de162abcf0032b  40add016d006b83  40dcbdf94954cbf  4112412980054e  45b94f2f7fe3777  47b9c9460053aa1  487a48fc093a337  4c3d2d0853bc4e8  4f37fe9de69600c  4f39df25b4511ed  502e2532382b5bd  50693a5fb2e619a  525ee1fb4c4680a  54722d8a30f6fe0  563a7227e39a5f7  5b27c17e52cfa36  61af886a629ac78  (+62 more)
(+1378 files in other folders)
