[package]
name = "ditiear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytes = "1.5.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_bytes = "0.11.12"
serde_columnar = { version = "0.3.2", optional = true}
similar = { version="2.3.0", features=[ "text", "bytes"] }
thiserror = "1.0.50"
twox-hash = "1.6.3"

[features]
default = []
binaryBlob = ["serde_columnar"]
